[package]
name = "doom-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bridge for the on-chain DOOM engine"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
doom-engine = { path = "../engine", features = ["substrate"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
] }
parity-scale-codec = { version = "3", features = ["derive"] }

[profile.release]
opt-level = "s"
lto = true
